    * All files in "binary directories" now provide their path. (CNY-930)
    * ELF files that have no DT_NEEDED or DT_SONAME entries no
      longer cause Conary to trace back attempting to discover
      the ELF ABI. (CNY-1072)
    * Config files, though added to the :config component by
      default (CNY-172), can now be appropriately overridden
      by ComponentSpec. (CNY-1107)

Changes in 1.0.39:
  o Client Changes:
    * A signature callback has been added, which allows one to catch
      the troves with bad signatures and react appropriately (display
      an error message, lower trust level, etc). (CNY-1008)
    * The conary.lib.logparse module has been added to provide
      parsed access to conary log files. (CNY-1075)
    * Added addRemoveRedirect() to allow redirecting packages to nothing
      (which causes them to be erased on update). Updated the client
      code to remove package components properly for this case (CNY-764)

  o Build Changes:
    * A "commitRelativeChangeset" configuration variable has been
      added to control whether Conary creates relative or absolute
      changesets when cooking.  It defaults to True, but can be
      changed to False to cause Conary to cook and commit absolute
      changesets. (CNY-912)
    * A list of X.org mirrors has been added to the default mirrors.
    * "cvc diff" now returns an return code of 2 on error, 1 if there
      are differences, and 0 if there are no differences. (CNY-938)
    * An "addResolveSource" method has been added to GroupRecipe.
      This will change how dependency resolution is done when building
      a group.  Instead of searching the label path defined in the
      group for solutions, the resolve source will be searched
      instead. This allows you to resolve dependencies against a
      particular version of a group. (CNY-1061)
    * Cloning multiple flavors of the same package in a single step is
      now possible. (CNY-1080)